--- a/entityConfig.default.json
+++ b/entityConfig.default.json
@@ -357,6 +357,9 @@
     "^MMetadata/Monsters/MudBurrower/MudBurrowerBodyDaemon": {
       "ignore": true
     },
+    "^Metadata/Monsters/JellfishNettler/JellyfishNettlerFlying": {
+      "ignore": true
+    },
       "^example$": {
       "showCastBar": true,
       "showInBossOverlay": true,
